# streamkit

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  build_phase2.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
api/: Dockerfile  __init__.py  main.py
api/core/: __init__.py  auth.py  config.py  exceptions.py
api/models/: __init__.py  asset.py
api/routers/: __init__.py  analytics.py  bootstrap.py  ik_compat.py  media.py  origins.py  presets.py  transform.py  upload.py  webhooks.py  workspaces.py
api/services/: __init__.py  queue.py  r2.py  supabase_client.py
docs/: API_REFERENCE.md  LANGUAGE_EXAMPLES.md
infra/: deploy.sh  nginx.conf
mcp/: Dockerfile  server.py
mcp/tools/: __init__.py  media_tools.py  query_tools.py  setup_tools.py
migrations/: 001_create_assets_table.sql  002_create_jobs_table.sql  003_create_api_keys_table.sql  004_rls_policies.sql  005_create_workspace_bootstrap_sessions_table.sql
streamkit_mcp/: README.md  __init__.py  context.py  mcp.json  requirements.txt  schemas.py  server.py
streamkit_mcp/tools/: __init__.py  _shared.py  media_tools.py  query_tools.py  setup_tools.py
supabase/migrations/: 20260411000000_phase2.sql
tests/: __init__.py  conftest.py  test_mcp_tools.py  test_media.py  test_transcode.py  test_transform.py  test_upload.py
worker/: Dockerfile  __init__.py  celery_app.py
worker/tasks/: __init__.py  image_task.py  metadata_task.py  video_task.py  webhook_task.py
worker/utils/: __init__.py  ffmpeg.py  ffprobe.py  hls.py  storage.py
